# ClaudeBot

./: .env.example  .gitignore  Dockerfile  README.md  config.example.yaml  docker-compose.yml  main.py  pyproject.toml  tg_main.py
.github/ISSUE_TEMPLATE/: bug.md  feature.md  task.md
.github/workflows/: build.yml  ci.yml  deploy-dev.yml  deploy-monitoring.yml  deploy-prod.yml  deploy.yml  tests.yml
docker/: telegram.Dockerfile
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx
migrations/: env.py
migrations/versions/: 880b28295d92_initial_users_table.py  ca8947082c4f_add_memory_to_users.py
monitoring/: .env.example  docker-compose.yml
monitoring/grafana/dashboards/: claudebot.json
monitoring/loki/: config.yml
monitoring/prometheus/: prometheus.yml
monitoring/promtail/: config.yml
src/: healthcheck.py
src/agent/: agent.py  langTools.py  modelSelector.py  service.py
src/agent/dto/: __init__.py  incomingMessage.py
src/agent/llm/: __init__.py  ask.py  langTools.py  modelSelector.py
src/bot/: router.py
src/config/: __init__.py  agentMessages.py  botMessages.py  messages.py  settings.py
src/logger/: __init__.py
src/storage/: __init__.py
src/utils/: metrics.py
src/web_api/: server.py
tests/: test_healthcheck.py
tests/agent/: test_agent.py  test_langTools.py  test_service.py
tests/bot/: test_router.py
tests/config/: test_agentMessages.py  test_botMessages.py  test_messages.py  test_settings.py
tests/logger/: test_LoggerFactory.py
tests/utils/: test_metrics.py
(+92 files in other folders)
