[project]
name = "claudebot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.27.0",
    "gitpython>=3.1.46",
    "langchain>=1.2.15",
    "langchain-anthropic>=1.4.0",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "requests>=2.33.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
