[project]
name = "claudebot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.27.0",
    "gitpython>=3.1.46",
    "langchain>=1.2.15",
    "langchain-openai>=0.3.0",
    "pydantic-settings>=2.13.1",
    "redis[asyncio]>=5.0",
    "telegramify-markdown>=0.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "requests>=2.33.1",
    "ddgs>=9.14.0",
    "httpx>=0.28.1",
    "beautifulsoup4>=4.14.3",
    "sqlalchemy>=2.0.49",
    "aiosqlite>=0.22.1",
    "pyyaml>=6.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
